[tool.poetry]
name = "bloganalysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.12.2"
matplotlib = "^3.8.2"
pytest = "^7.4.4"
openai = "^1.7.2"
tenacity = "^8.2.3"
python-dotenv = "^1.0.0"
langchain = "^0.3.9"
faiss-cpu = "^1.9.0.post1"
langchain-community = "^0.3.9"
tiktoken = "^0.8.0"
langchain-openai = "^0.2.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
